# simple-anchor-idl-ts

./: Cargo.toml  README.md
src/: main.rs
